--- a/index.html
+++ b/index.html
@@ -1,184 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>RESPONSIVE PERSONAL PORTFOLIO WEBSITE </title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix clone</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
-
 <body>
+    <header id="header"class="">
+        <div class="header-cont container">
+            <div class="left-cont">
+                <img class="header-brand" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c529.png"alt="">
+                <ul class="main-nav">
+                    <li class="nav-item active">Home</li>
+                    <li class="nav-item">TV Shows</li>
+                    <li class="nav-item">Movies</li>
+                    <li class="nav-item">New & Popoular</li>
+                    <li class="nav-item">My List</li>
+                    <li class="nav-item">Browse by Languages</li>
+                </ul>
+            </div>
+            <div class="right-cont">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="search-icon">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13 11C13 13.7614 10.7614 16 8 16C5.23858 16 3 13.7614 3 11C3 8.23858 5.23858 6 8 6C10.7614 6 13 8.23858 13 11ZM14.0425 16.2431C12.5758 17.932 10.4126 19 8 19C3.58172 19 0 15.4183 0 11C0 6.58172 3.58172 3 8 3C12.4183 3 16 6.58172 16 11C16 11.9287 15.8417 12.8205 15.5507 13.6497L24.2533 18.7028L22.7468 21.2972L14.0425 16.2431Z" fill="currentColor"></path>
+                </svg>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="Hawkins-Icon Hawkins-Icon-Standard">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13 4.57092C16.3922 5.05624 18.9998 7.9736 18.9998 11.5V15.2538C20.0486 15.3307 21.0848 15.4245 22.107 15.5347L21.8926 17.5232C18.7219 17.1813 15.409 17 11.9998 17C8.59056 17 5.27764 17.1813 2.10699 17.5232L1.89258 15.5347C2.91473 15.4245 3.95095 15.3307 4.99978 15.2538V11.5C4.99978 7.97345 7.6076 5.05599 11 4.57086V2H13V4.57092ZM8.62568 19.3712C8.6621 20.5173 10.1509 22 11.9993 22C13.8477 22 15.3365 20.5173 15.373 19.3712C15.38 19.1489 15.1756 19 14.9531 19H9.04555C8.82308 19 8.61862 19.1489 8.62568 19.3712Z" fill="currentColor"></path>
+                </svg>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStwFaYAGTiZ0jEmNQos74oTp5FIKJ5aUK71w&usqp=CAU" alt="">
 
-    <header class="header">
-        <a href="#" class="logo"> Neeraj's Portfolio</a>
-        <i class='bx bx-menu' id="menu-icon"></i>
-        <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">ABOUT</a>
-            <a href="#services">SERVICES</a>
-            <a href="#portfolio">PORTFOLIO</a>
-            <a href="#contact">CONTACT</a>
-        </nav>
+            </div>
+        </div>
+
     </header>
-    <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello,It's Me</h3>
-            <h1>Neeraj Sharma</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
-            <div class="social-media">
-                <a href="https://github.com/Neeraj1898/Responsive-personal_portfolio"><i class='bx bxl-github'></i></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox"><i class='bx bxs-envelope'></i></a>
-                <a href="https://www.instagram.com/neeraj_980549/"><i class='bx bxl-instagram'></i></a>
-                <a href="https://in.linkedin.com/in/neeraj-sharma-596155271"><i class='bx bxl-linkedin-square'></i></a>
-            </div>
-            <a href="./Screenshot 2023-08-22 at 12.54.46 AM.pdf" target="_blank" class="btn">Download CV</a>
-        </div>
-        <div class="home-img">
-            <img src="https://www.phoenix.edu/blog/2023/03/programmer-vs-software-engineer-key-differences/_jcr_content/root/container_14213/columns/responsivegrid1/container/container_copy/image_1151727092.coreimg.85.1600.jpeg/1679007029729/male-programmer-writing-code-in-modern-office-704x421.jpeg"
-                alt="">
-        </div>
-    </section>
-    <section class="about" id="about">
-        <div class="about-img">
-            <img src="https://wallpaperaccess.com/full/1385382.jpg" alt="">
-        </div>
-        <div class="about-content">
-            <h2 class="heading">About<span>Me</span></h2>
-            <h3>Frontend Developer</h3>
-            <p>Frontend developer with experience building singlre-page web application and a knack for creating
-                attractive user interfaces.
-                skilled experience in javascript,HTML,CSS,PHP,BOOTSTRAP. </p>
-            <a href="#" class="btn">Read More</a>
-        </div>
-    </section>
-    <section class="services" id="services">
-        <h2 class="heading">Our<span>Services</span></h2>
+    <div class="banner-section" id="banner-section">
+        <div class="banner_fadeBottom"></div>
+    </div>
+    <!-- banner section end -->
 
-        <div class="services-container">
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <p>Motivated designer and developer
-                    with experience creating custom websites through PHP and CSS.
-                    Strong collaboration skills and proven history of application development. DHTML and JavaScript. MS
-                    Access and MySQL.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bx-crop'></i>
-                <h3>UI/UX Design</h3>
-                <p>You cannot make a good design if you do not understand people; design is made for people.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-instagram-alt'></i>
-                <h3>App Design</h3>
-                <p>I'm UI/UX Designer with a great passion to my work. The main goal is to create modern, attractive and
-                    user-friendly interfaces and find creative and simple solutions for your business.
-                </p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-        </div>
-    </section>
-    <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest<span>Project</span></h2>
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="https://unsplash.com/photos/zG4l0ZydhRk/download?ixid=M3wxMjA3fDB8MXx0b3BpY3x8NnNNVmpUTFNrZVF8fHx8fDJ8fDE2OTI2OTA4NDN8&force=true"
-                    alt="">
-                <div class="portfolio-layer">
-                    <h4>Personal Portfolio</h4>
-                    <p>In this project I try making my own portfolio website for myself. Showcase my projects, my social
-                        media handles, my experience on the website.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="https://unsplash.com/photos/wWIWbpV6Awo/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjkyNjk2NTk5fA&force=true"
-                    alt="">
-                <div class="portfolio-layer">
-                    <h4>dynamics website Deployment in AWS</h4>
-                    <p>In this project I try deployed dynamics website in AWS.so that we can add deleted the data by
-                        connecting to databases.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="https://unsplash.com/photos/-S3IU3Uqvi8/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjkyNjk2NzA2fA&force=true"
-                    alt="">
-                <div class="portfolio-layer">
-                    <h4>Iris flower detection</h4>
-                    <p>In this project I try detect the iris flower type by using machine learning predication model.And
-                        deployed in streamlit python</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="https://unsplash.com/photos/0p_O6eWTUs8/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjkyNjk2ODQ3fA&force=true"
-                    alt="">
-                <div class="portfolio-layer">
-                    <h4>Cab Booking </h4>
-                    <p>In this project we can book a cab by using java.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="contact" id="contact">
-        <h2 class="heading">Contact<span>ME!</span></h2>
-
-        <form action="#" name="submit-to-google-sheet">
-            <div class="input-box">
-                <input type="text" name="Name" placeholder="Full Name">
-                <input type="email" name="Email Address" placeholder="Email Address">
-            </div>
-            <div class="input-box">
-                <input type="number" name="Mobile Number" placeholder="Mobile Number">
-                <input type="text" name="Email Subject" placeholder="Email Subject">
-            </div>
-            <textarea name="Your Message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-        <span id="msg"></span>
-    </section>
-
-    <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by Neeraj | All Rights Reserved.</p>
-        </div>
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-    </footer>
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="script.js"></script>
-    <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbzFPVGxI-75Ilkm2z_EMuI9ubPlp8-7dQmMzzdPiIunLPPzj3bcY1ohMdT_DfZ3zPwhTA/exec'
-        const form = document.forms['submit-to-google-sheet']
-        const msg = document.getElementById("msg")
-
-        form.addEventListener('submit', e => {
-            e.preventDefault()
-            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                .then(response => {
-                    msg.innerHTML = "Message sent successfully"
-                    setTimeout(function () {
-                        msg.innerHTML = ""
-                    }, 5000)
-                    form.reset()
-                })
-                .catch(error => console.error('Error!', error.message))
-        })
-    </script>
+    <!-- movies sections -->
+    <div class="movies-cont container" id="movies-cont">
+    </div>
 
 </body>
-
 </html>
